<resources>
    <string name="app_name">Taskly</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="sample_title">Sample title</string>
    <string name="note_title">Title</string>
    <string name="take_a_note">Note</string>
    <string name="add_new_item">New Item</string>
    <string name="edit_existing_item">Edit Item</string>
    <string name="save_note">Save</string>
    <string name="delete_existing_item">Delete item</string>
    <string name="save_existing_item">Save Item</string>
    <string name="delete_dialog_title">Deleting Item</string>
    <string name="delete_dialog_message">Are you sure you want to delete the item selected?</string>
    <string name="high_priority">HIGH</string>
    <string name="medium_priority">MEDIUM</string>
    <string name="low_priority">LOW</string>
    <string name="task_status_done">DONE</string>
    <string name="task_status_incomplete">NOT DONE</string>
    <string name="date_picker_title">Due Date</string>
    <string name="no_items">No Items to display. Start adding items</string>
    <string name="add_item_button">Add Item</string>
    <string name="please_enter_the_title">Please enter the title</string>
    <string name="save_dialog_title">Save Item</string>
    <string name="save_dialog_message">Do you want to save the changes?</string>
    <string name="dismiss">DISMISS</string>
    <string name="added_new_item">Item added to the list</string>
    <string name="modified_existing_item">Modified item successfully</string>
    <string name="deleted_item">Item deleted successfully</string>
    <string name="title">Title</string>
    <string name="due_date">Due Date</string>
    <string name="due_time">Due Time</string>
    <string name="priority">Priority</string>
    <string name="item_status">Item Status</string>
    <string name="assigned_to">Assigned To</string>
    <string name="time_picker_title">Due time</string>
    <string name="task_reminder_title">Task Reminder</string>
    <string name="set_reminder_text">Reminder</string>
    <string name="complete_task">Complete task</string>
    <string name="show_more_items">Show completed items</string>
    <string name="hide_completed_tasks">Hide Completed items</string>
    <plurals name="selected">
        <item quantity="other">%1$d selected</item>
    </plurals>
</resources>
