<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.constraint.ConstraintLayout
        android:id="@+id/dialog_todo_list_cl"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/dialog_title_et"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/note_title"
            android:inputType="text"
            android:paddingBottom="16dp"
            android:paddingLeft="@dimen/text_margin"
            android:paddingStart="@dimen/text_margin"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="0dp"
            app:layout_constraintTop_toBottomOf="@+id/dialog_item_toolbar"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/dialog_body_et"
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/take_a_note"
            android:inputType="textMultiLine"
            android:minLines="5"
            android:paddingLeft="@dimen/text_margin"
            android:paddingStart="@dimen/text_margin"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_title_et"
            app:layout_constraintVertical_bias="0.0"/>

        <android.support.v7.widget.Toolbar
            android:id="@+id/dialog_item_toolbar"
            app:title="@string/add_new_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="0dp"
            app:layout_constraintRight_toRightOf="parent"/>
    </android.support.constraint.ConstraintLayout>

</layout>