<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/dialog_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="8dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:navigationIcon="@drawable/ic_close_white_24px"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/app_name"
        app:titleTextAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"/>

    <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/reminder_switch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/set_reminder_text"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                android:paddingLeft="8dp"
                android:drawableLeft="@android:drawable/ic_lock_idle_alarm"
                android:drawablePadding="8dp"
                app:layout_constraintTop_toBottomOf="@+id/item_title_til"
                android:layout_marginRight="16dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginLeft="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintHorizontal_bias="0.0"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginRight="16dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:id="@+id/item_title_til"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/title_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:visibility="gone"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:id="@+id/reminder_linearLayout"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/reminder_switch">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/due_date_til"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="0.6">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/due_date_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:drawableRight="@drawable/ic_arrow_drop_down_black_24dp"
                        android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
                        android:hint="@string/due_date"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/time_til"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/time_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:drawableRight="@drawable/ic_arrow_drop_down_black_24dp"
                        android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
                        android:hint="@string/due_time"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/priority_til"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reminder_linearLayout"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/priority_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:drawableRight="@drawable/ic_arrow_drop_down_black_24dp"
                    android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
                    android:hint="@string/priority"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/item_desc_til"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/priority_til"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/item_desc_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|left"
                    android:hint="Item Description"
                    android:minLines="4"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/item_status_til"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_desc_til"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/item_status_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:drawableRight="@drawable/ic_arrow_drop_down_black_24dp"
                    android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
                    android:hint="@string/item_status"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/assigned_to_til"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:focusable="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_status_til">

                <EditText
                    android:id="@+id/assigned_to_edit_text"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/assigned_to"/>
            </android.support.design.widget.TextInputLayout>

        </android.support.constraint.ConstraintLayout>


    </ScrollView>

</LinearLayout>
