<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.codepath.preassignment.todoapp.activity.ToDoListActivity"
    android:id="@+id/coordinator_layout_todo_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

        </android.support.design.widget.AppBarLayout>


        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/nested_scroll_view"
            >

            <LinearLayout
                android:id="@+id/display_add_item_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    android:id="@+id/todo_list_rv"/>


                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/show_completed_items_button"
                    style="@style/Base.Widget.AppCompat.Button.Colored"
                    android:layout_margin="16dp"
                    android:text="@string/show_more_items"
                    tools:text="Show completed items"
                    android:layout_gravity="center"
                    android:visibility="visible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/done_list_rv"
                    android:visibility="gone"
                    />


            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/linear_layout_display_msg_btn"
        android:gravity="center"
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/no_items_msg_tv"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textSize="16sp"
            style="@style/Base.TextAppearance.AppCompat.Title"
            android:text="@string/no_items"
            />
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/add_item_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_item_button"
            android:padding="16dp"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            />
    </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/add_item_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabSize="normal"
            app:elevation="6dp"
            app:pressedTranslationZ="12dp"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:src="@drawable/fab_plus"/>

    </android.support.design.widget.CoordinatorLayout>

